fix: adjust spacing

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -105,7 +105,7 @@
 }
 
 .intro-flex {
-    gap: 10.25rem;
+    gap: 9rem;
 }
 
 .intro {
@@ -169,8 +169,8 @@
 }
 
 .hotel-benefit {
-    margin-top: 14.25rem;
-    margin-bottom: 14.25rem;
+    margin-top: 12rem;
+    margin-bottom: 9rem;
 
     h2 {
         font-size: 2.5rem;
@@ -204,8 +204,8 @@
 }
 
 .testimony-section {
-    margin-top: 14.25rem;
-    margin-bottom: 14.25rem;
+    margin-top: 9rem;
+    margin-bottom: 10rem;
 
     h2 {
         font-size: 2.5rem;
@@ -249,8 +249,8 @@
 }
 
 .gallery {
-    margin-top: 14.25rem;
-    margin-bottom: 14.25rem;
+    margin-top: 10rem;
+    margin-bottom: 9rem;
 
     .small-item {
         height: 65vw;
@@ -265,7 +265,7 @@
 }
 
 .partner {
-    margin-top: 14.25rem;
+    margin-top: 10rem;
     margin-bottom: 9rem;
 
     .partner-list {
